pkg/config/analysis/analyzers/testdata/serviceentry-address-allocated-no-dns-capture.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: address-allocated-no-dns-capture
spec:
  hosts:
  - dummy.testing.io
  ports:
  - name: tcp
    number: 443
    protocol: TCP
status:
  addresses:
  - host: dummy.testing.io
    value: 240.240.0.1
  - host: dummy.testing.io
    value: 2001:2::1
